style.css
body {
	font-family: sans-serif;
}

#container {
	max-width: 100%;
}

#navigation {
	background: #FFB4B0;
	padding: 0;
}

#navigation ul li {
	list-style-type: none;
	display: inline;
}

#song-options {
	background: #4DD7FA;
	width: 15%;
	float: left;
	padding: 1em;
}

.overflow {
	overflow: hidden;
}

#genre-title {
	margin-bottom: .5em;
}

.submit {
	font-size: 2em;
	margin: .5em 0 0;
}

#results {
	background: #FEFAC0;
	float: left;
	width: 77.625%;
	padding: 1em;
}

.song-name {
	font-size: 2em;
	color: #785616;
	margin: 0 0 .25em;
}

.bordered {
	border: .125em solid black;
	margin: .5em;
}

.displayblock {
	display: block;
	width: 100%;
}

.results-line {
	margin-bottom: 2em;
}

.floatleft {
	float: left;
}

.floatright {
	float: right;
	text-align: right;
}

